<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_20sdp">

    <com.gsc.app.utils.customviews.GscActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_car_location" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10sdp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/fl_map"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:background="@color/very_light_gray" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_location_name"
                style="@style/GscEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Sail Taif Road Parking, 2345, Makkah"
                android:textColor="@color/dark_gray"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                app:drawableStartCompat="@drawable/ic_pin"
                app:layout_constraintTop_toBottomOf="@id/cv_map" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_car_location_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/car_location_info"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_location_name" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/very_light_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_car_location_info" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/address_label_optional"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/street"
                app:layout_constraintTop_toBottomOf="@id/et_address_label" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/area"
                app:layout_constraintTop_toBottomOf="@id/et_street" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/city"
                app:layout_constraintTop_toBottomOf="@id/et_area" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_attach_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:drawableEnd="@drawable/ic_attachment"
                android:drawableTint="@color/gray"
                android:focusable="false"
                android:hint="@string/attach_picture"
                android:inputType="none"
                app:layout_constraintTop_toBottomOf="@id/et_city" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="Add"
                app:layout_constraintTop_toBottomOf="@id/et_attach_picture" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>